--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
+        <configuration>
+          <mainClass>edu.ntnu.idatt2003.group25.view.MainStarter</mainClass>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -52,5 +62,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
