--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>edu.ntnu.idatt2003.group25.view.MainStarter</mainClass>
+          <mainClass>edu.ntnu.idatt2003.group25.MainStarter</mainClass>
         </configuration>
         <executions>
           <execution>
